--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,6 +7,17 @@
   box-sizing: inherit;
 }
 
+/**
+ * Basic Reset
+ */
+ 
+ h1,h2,h3,h4,h5,p,a {
+  margin: 0;
+  padding: 0
+}
+
+img { max-width: 100% }
+
 html {
   font-size: 100%;
   -webkit-font-smoothing: antialiased;
@@ -23,25 +34,68 @@ body {
     font-style: normal;
     cursor: pointer;
 }
+
 /**
- * Basic Reset
+ * #wrapper
+ * Use [id="wrapper"] so CSS specificity doesn't get FUBAR
  */
-h1,h2,h3,h4,h5,p,a {
-  margin: 0;
-  padding: 0
+ [id="wrapper"] {
+  width: 95%;
+  height: 100%;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-a {
+
+/* Link Styles */
+
+a,a:hover,a:visited {
   text-decoration: none;
 }
 
-#articles {
+/*
+-------------------------------------
+.primary-header
+-------------------------------------
+*/
+
+.primary-header {
+  /* need to see how this renders */
+}
+
+  .primary-site-header {
+    /* check and see how this renders */
+  }
+
+/*
+-------------------------------------
+.app-content
+-------------------------------------
+*/
+
+/* #articles */
+
+[id="articles"] {
   max-width: 50rem;
   margin: 0 auto;
   background:#fff;
   padding: 0.75em;
-  
 }
+
+/** 
+ * #notes
+ * @todo update styles once js is working
+ */
+#notes {
+  min-height: 500px;
+  background: #FFF;
+  float: left;
+  width: 500px;
+}
+
+
 .title{
   padding: 0.375em 0;
   border-bottom: thin solid #616161;
@@ -67,14 +121,7 @@ a:hover {
 
 }
 
-#wrapper 
-{
-  width: 95%;
-  padding-left: 5%;
-  padding-right: 5%;
-  margin-left: auto;
-  margin-right: auto;
-}
+
   
   #wrapper:before, #wrapper:after {
     content: " ";
@@ -83,10 +130,12 @@ a:hover {
 
 
 
-#notes 
-{
-  float: right;
-  width: 30%;
+
+
+.titleinput {
+  background: PURPLE;
+  width: 100%;
+  height: 20px;
 }
 textarea, input 
 {
