--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -28,7 +28,7 @@ body {
     background-color: #333;
     font-size: 1em;
     line-height: 1.8;
-    font-family: 'Source Sans Pro';
+    font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow-y: auto;
     font-weight: 400;
     font-style: normal;
@@ -39,6 +39,7 @@ body {
  * #wrapper
  * Use [id="wrapper"] so CSS specificity doesn't get FUBAR
  */
+
  [id="wrapper"] {
   width: 95%;
   height: 100%;
@@ -47,13 +48,22 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+  /* Clearfix for #wrapper */
 
+  [id="wrapper:before"], [id="wrapper:after"] {
+    content: " ";
+    display: table;
+  }
 
 /* Link Styles */
 
 a,a:hover,a:visited {
   text-decoration: none;
+  color: firebrick;
+  font-weight: 600;
+  text-decoration: underline;
 }
+
 
 /*
 -------------------------------------
@@ -67,6 +77,8 @@ a,a:hover,a:visited {
 
   .primary-site-header {
     /* check and see how this renders */
+    text-transform: capitalize;
+
   }
 
 /*
@@ -78,21 +90,21 @@ a,a:hover,a:visited {
 /* #articles */
 
 [id="articles"] {
-  max-width: 50rem;
-  margin: 0 auto;
+  max-width: 75%;
   background:#fff;
-  padding: 0.75em;
+  margin-right: 5%;
 }
 
 /** 
  * #notes
  * @todo update styles once js is working
  */
+
 #notes {
   min-height: 500px;
   background: #FFF;
   float: left;
-  width: 500px;
+  width: 20%;
 }
 
 
@@ -113,20 +125,11 @@ a,a:hover,a:visited {
 
 }
 
-a:active,
-a:hover {
-  color: firebrick;
-  font-weight: 600;
-  text-decoration: underline;
 
-}
 
 
   
-  #wrapper:before, #wrapper:after {
-    content: " ";
-    display: table;
-  }
+
 
 
 
